How you like me now

--- a/PRG3/package.json
+++ b/PRG3/package.json
@@ -12,6 +12,6 @@
     "contributors": [],
     "dependencies": {
         "body-parser": "latest",
-        "express": "^4.16.4"
+        "express": "latest"
     }
 }
